--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="lead">En el boton de abajo es para poder vizualizar un reporte hecho en PHP</p>
         <hr class="my-4">
         <p>Esto es solo una prueba utilizando PHP</p>
-        <a class="btn btn-primary btn-lg" href="web/registro.html" role="button">Registrar Estudiantes</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Registrar Estudiantes</a>
         <a class="btn btn-primary btn-lg" href="Reporte.php" role="button">Descargar Reporte</a>
       </div>
 
